Changed config of app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=vending_machine
-spring.datasource.url=jdbc:postgresql://localhost:5432/alipetek
+spring.datasource.url=jdbc:postgresql://postgres:5432/alipetek
 spring.datasource.username=admin
 spring.datasource.password=admin
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.profiles.active=docker
 
 logging.level.org.springframework.web: DEBUG
 logging.level.org.hibernate: ERROR
